# supla-espressif-esp

./: .drone.yml  .gitignore  README.md  sdk3x_build_env_init.sh
dhcp-issue/: README.txt  ack.frame  dhcp.patch
docker/: Dockerfile  build.sh  clone.sh  run.sh
extras/docker/: Dockerfile  build.sh  run.sh
src/: Makefile  build.sh  build.sh.orig  iram_find_text.sh
src/driver/: dht22.c
src/html/: cfg-template1.html
src/include/: espmissingincludes.h
src/nettle/: Makefile  bignum.c  gmp-glue.c  mini-gmp.c  pkcs1-rsa-sha256.c  pkcs1.c  rsa-sha256-verify.c  rsa-verify.c  rsa.c  sha256-compress.c  sha256.c  write-be32.c
src/user/: mqtt.c  mqtt.h  mqtt_pal.h  supla_dht.c  supla_dht.h  (+45 more)
supla-common/: ipcsocket.h  proto.h  srpc.c  srpc.h
test/: .gitignore  CMakeLists.txt  check_compilation_of_all_targets.sh  common_cmake_definitions.txt  compile.sh  makefile  run.sh  run_test.sh
test/doubles/: board_ut_testing.h  c_types.h  eagle_soc.h  eagle_soc_intf.cpp  eagle_soc_intf.h  eagle_soc_mock.cpp  eagle_soc_mock.h  eagle_soc_stub.cpp  eagle_soc_stub.h  espconn.c  espconn.h  ets_sys.c  ets_sys.h  gpio.c  gpio.h  ip_addr.c  log.cpp  mem.h  nettle_stub.c  os_type.h  osapi.c  osapi.h  spi_flash.c  spi_interface.cpp  spi_interface.h  spi_mock.cpp  spi_mock.h  spi_stub.cpp  spi_stub.h  srpc_mock.cpp  srpc_mock.h  supla_esp.c  supla_esp.h  supla_esp_gpio_stub.c  supla_esp_mock.cpp  supla_esp_mock.h  time_interface.cpp  time_interface.h  time_mock.h  uart_mock.c  (+11 more)
test/gtest/: main.c
test/include/: c_types.h
test/mock/: uart.c  uart.h  uptime.c  uptime.h
test/src/: at_tests.cpp  board_stub.c  board_stub.h  calcfg_cfgmode_tests.cpp  cfg_tests.cpp  facade_blind_tests.cpp  input_tests.cpp  relay_staircase_tests.cpp  relay_tests.cpp  roller_shutter_auto_cal_tests.cpp  roller_shutter_calcfg_tests.cpp  roller_shutter_motor_problem_tests.cpp  roller_shutter_sbs_and_stop_tests.cpp  roller_shutter_tests.cpp  rs_inputs_tests.cpp
(+102 files in other folders)
